# baja-iot

./: README.md  TODO.md  display.py  docs.txt  master.py  mpu6050.py  ssd1306.py  test.py
cpp/mpu6050/: CMakeLists.txt  mpu6050_i2c.c
cpp/slave/: CMakeLists.txt  i2c_slave.c
